# saros-telegram-bot

indexer/: package-lock.json  package.json  tsconfig.json
indexer/idls/: meteora_dlmm.json
indexer/prisma/: schema.prisma
indexer/src/: index.ts
indexer/src/lib/: bullmq.ts  prisma.ts  redis.ts
indexer/src/queues/: activeBinWorker.ts  telegramWorker.ts
indexer/src/services/: redisMeteoraPools.ts  subscriptions.ts
indexer/src/stream/: handlers.ts  requestBuilder.ts  startStream.ts
indexer/src/utils/: accountCoder.ts  bot.ts  lbPairDiscriminator.ts  meteoraDLMMProgramId.ts
ts-bot-backend/: .env.example  .gitignore  anchor-loader.js  package-lock.json  package.json  register-loaders.js  register-require-polyfill.js  resolve-lodash.js  tsconfig.json  vitest.config.ts
ts-bot-backend/prisma/: schema.prisma
ts-bot-backend/src/: anchor-shim.js
ts-bot-backend/src/bot/: index.ts
ts-bot-backend/src/db/: getPrivateKey.ts  pool.ts  position.ts  token.ts  user.ts
ts-bot-backend/src/interfaces/: pool.ts
ts-bot-backend/src/lib/: prisma.ts  redis.ts
ts-bot-backend/src/services/: buildAddLiquidityTransaction.ts  buildClaimRewardTransaction.ts  buildCloseAllPositionsForPoolTransaction.ts  buildClosePositionTransactions.ts  buildCreateAMMPoolTransaction.ts  (+29 more)
tss/: README.md
tss/rust-backend-1/: .gitignore  Cargo.toml
tss/rust-backend-1/src/: error.rs  main.rs  serialization.rs  tss.rs
tss/ts-test-client/: package-lock.json  package.json
x402-backend/: nodemon.json  package-lock.json  package.json
x402-backend/src/: config.ts  pricing.ts  server.ts
(+91 files in other folders)
