[package]
name = "rust-backend-1"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.48", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
bincode = "1"
hex = "0.4"
thiserror = "1"
bs58 = "0.4"
rand07 = { package = "rand", version = "0.7" }
solana-client = "=1.14.17"
solana-sdk = "=1.14.17"
solana-program = "=1.14.17"
ed25519-dalek = "1"
curv = { package = "curv-kzen", version = "0.9", default-features = false, features = ["num-bigint"] }
multi-party-eddsa = { git = "https://github.com/ZenGo-X/multi-party-eddsa.git", rev = "4b5e5c8d8e92f94eed38b037e0d83ad0d2a144ea", default-features = false }
dotenvy = "0.15"
sqlx = { version = "=0.8.0", default-features = false, features = ["runtime-tokio-rustls", "postgres", "macros"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
console = { version = "=0.16.2", features = ["std"] }
indicatif = "=0.16.2"


[patch.crates-io]
curv-kzen = { path = "vendor/curv-kzen" }